# shuttle-template-rocket

./: Cargo.toml  README.md  justfile
src/lib/: lib.rs  router.rs
src/lib/routes/: index.rs  mod.rs
tests/: endpoints.rs  index.rs  main.rs
