[package]
name = "shuttle-template-rocket"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shuttle-template-rocket"
path = "src/bin/httpd.rs"

[lib]
name = "shuttle_template_rocket"
path = "src/lib/lib.rs"

[dependencies]
rocket = "0.5.0-rc.4"
shuttle-rocket = "0.33.0"
shuttle-runtime = "0.33.0"
tokio = "1.34.0"
