[package]
name = "shuttle-template-rocket"
version = "1.0.0"
edition = "2021"
description = "Template for building a Shuttle application using Rocket"
readme = "README.md"
authors = ["Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev"]
repository = "https://github.com/sentinel1909/shuttle-template-rocket"
license = 'MIT'
keywords = ["rocket, shuttle"]
publish = false

[[bin]]
name = "shuttle-template-rocket"
path = "src/bin/httpd.rs"

[lib]
name = "shuttle_template_rocket"
path = "src/lib/lib.rs"

[dependencies]
rocket = "0.5.0"
shuttle-rocket = "0.34.0"
shuttle-runtime = "0.34.0"
tokio = "1.34.0"
